--- a/site/index.html
+++ b/site/index.html
@@ -1,37 +1,44 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Digital Birra</title>
-        <link rel="stylesheet" href="css/styles.css">
-        </head>
-        <body>
-            <header>
-                <nav class="navBar">
-                <a class="navBar__menu">Menú desplegable</a>
-                <a class="navBar__logo"><img src="" alt="Logo Digital Birra"></a>
-            <section navBar__faq--carrito>
-                <a class="navBar__faq">??????????</a>
-                <a class="navBar__carrito">Carrito</a>
-            </section>
-            </nav>
-                <section class="buscador">Buscador</section>
-            </header>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Digital Birra</title>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<header>
+			<nav class="navBar">
+				<section class="navBar__menu">Menú desplegable</section>
+				<section class="navBar__contenedor--logo"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></section>
+				<section class="navBar__faq--carrito">
+					<section class="navBar__faq">??????????</section>
+					<section class="navBar__carrito">Carrito</section>
+				</section>
+			</nav>
+			<section class="buscador">
+				<form class="buscador__formulario">
+					<input type="text" placeholder="Encontrá tu cerveza.." autofocus>
+				</form>
 
-            <main>
-                <p>Esto es el main</p>
-            </main>
+				<img src="" alt="Lupita">
 
-
-
-        <footer class="pie">
-            <img src="" alt="Logo Digital Birra Footer">
-            <p><strong>DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</strong></p>
-
-        </footer>
-
-
-
-    </body>
-    </html>
+			</section>
+		</header>
+		
+		<main class="contenedorMain">
+			<p>Esto es el main</p>
+		</main>
+		
+		
+		
+		<footer class="pie">
+			<img class="imagenFooter" src="static/img/LogoA.png" alt="Logo Digital Birra Footer">
+			<p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
+			
+		</footer>
+		
+		
+		
+	</body>
+	</html>
