sumo menuH y clase/mod Main y Body

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,13 @@
 	<body>
 		<header>
 			<nav class="navBar">
-				<section class="navBar__menu">Menú desplegable</section>
+				<section class="navBar__menu">
+					<article class="menuH">
+						<div class="barrita1"></div>
+						<div class="barrita2"></div>
+						<div class="barrita3"></div>
+					</article>
+				</section>
 				<section class="navBar__contenedor--logo"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></section>
 				<section class="navBar__faq--carrito">
 					<section class="navBar__faq">??????????</section>
