--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 
-	<body>
+	<body class="contenedorBody">
 		<header>
 			<nav class="navBar">
 				<section class="navBar__menu">
@@ -23,6 +23,7 @@
 					<section class="navBar__carrito"><img src="static/img/shopping-cart.svg" alt="carrito"></section>
 				</section>
 			</nav>
+			
 			<section class="buscador">
 				<form class="buscador__formulario">
 					<input type="text" placeholder="Encontrá tu cerveza.." autofocus>
