--- a/site/index.html
+++ b/site/index.html
@@ -8,10 +8,10 @@
 	</head>
 
 	<body class="contenedorBody">
-		<header>
+		<header class="cabeza">
 			<nav class="navBar">
 				<section class="navBar__menu">
-					<article class="menuH">
+					<article class="menuHamburguesa">
 						<div class="barrita1"></div>
 						<div class="barrita2"></div>
 						<div class="barrita3"></div>
@@ -26,10 +26,10 @@
 			
 			<section class="buscador">
 				<form class="buscador__formulario">
-					<input type="text" placeholder="Encontrá tu cerveza.." autofocus>
+					<input class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
 				</form>
 
-				<img src="static/img/lupa.svg" alt="Lupita">
+				<img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
 
 			</section>
 		</header>
