--- a/site/index.html
+++ b/site/index.html
@@ -19,8 +19,8 @@
 				</section>
 				<section class="navBar__contenedor--logo"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></section>
 				<section class="navBar__faq--carrito">
-					<section class="navBar__faq"><img src="static/img/question.svg" alt="question"></section>
-					<section class="navBar__carrito"><img src="static/img/shopping-cart.svg" alt="carrito"></section>
+					<section class="navBar__faq"><img class="navBar--imagenes" src="static/img/question.svg" alt="question"></section>
+					<section class="navBar__carrito"><img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito"></section>
 				</section>
 			</nav>
 			
