cree el archivo package.json y instale express. empece el archivo app.js para los ruteos y agregue los links en el index.html para reemplazar temporariamente el menu y poder ir probando la navegacion

--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,14 @@
 		
 
 		<main class="contenedorMain">
-			<p>Esto es el main</p>
+
+			<p class="contenedorMain__links">MENÚ DESPLEGABLE EN PROGRESO :D</p><br>
+			<p class="contenedorMain__links">Mientras tanto, podes navegar con estos links:</p><br>
+			<a href="home.html" class="contenedorMain__links">Home</a>
+			<a href="login.html" class="contenedorMain__links">Login</a>
+			<a href="producto.html" class="contenedorMain__links">Producto</a>
+			<a href="sobre_nosotros.html" class="contenedorMain__links">Sobre Nosotros</a>
+			<a href="faq.html" class="contenedorMain__links">FAQ</a>
 		</main>
 		
 		
