--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -25,7 +25,7 @@
             </p>
         </section>
      </article> 
-        <button class="btn--volver">Volver al inicio</button>
+        <a href="index.html"><button class="btn--volver">Volver al inicio</button></a>
 
     </main>
     
