arregle una ruta de la imagen del login

--- a/site/login.html
+++ b/site/login.html
@@ -36,7 +36,7 @@
 
     <main class="contenedorMain">
       
-            <img class="logLogo" src="/static/img/logoLog.png" alt="logLogo">
+            <img class="logLogo" src="static/img/logoLog.png" alt="logLogo">
             <form action="" class="cont__form">
                 <!-- <label for="logMail">Mail</label> -->
                 <input class="log--input" type="email" name="logMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" autofocus>
