--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
 						<div class="barrita3"></div>
 					</article>
 				</section>
-				<section class="navBar__contenedor--logo"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></section>
+				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
 					<section class="navBar__faq"><img class="navBar--imagenes" src="static/img/question.svg" alt="question"></section>
 					<section class="navBar__carrito"><img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito"></section>
