arreglo login button y footer

--- a/site/login.html
+++ b/site/login.html
@@ -45,6 +45,11 @@
                 <input class="log--submit" type="submit" value="Ingresar">
             </form>    
     </main>
+    <footer class="pie">
+        <img class="imagenFooter" src="static/img/LogoA.png" alt="Logo Digital Birra Footer">
+        <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
+        
+    </footer>
     
 </body>
 </html>
