agrego menu temporario con hover

--- a/site/index.html
+++ b/site/index.html
@@ -17,6 +17,15 @@
 						<div class="barrita3"></div>
 					</article>
 				</section>
+				<section class="navBar__linksMenu">
+					<a class="linksMenu--a" href="home.html">+ HOME</a>
+					<a class="linksMenu--a" href="">+ MI CUENTA</a>
+					<a class="linksMenu--a" href="sobre_nosotros.html">+ SOBRE NOSOTROS</a>
+					<a class="linksMenu--a" href="faq.html">+ PREGUNTAS FRECUENTES</a>
+					<a class="linksMenu--a" href="login.html">+ LOGIN</a>
+					<a class="linksMenu--a" href="">+ REGISTRARTE</a>
+					<a class="linksMenu--a" href="">+ CARRITO</a>
+				</section>
 				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
 					<section class="navBar__faq"><img class="navBar--imagenes" src="static/img/question.svg" alt="question"></section>
