arreglo espacio oculto por menu

--- a/site/faq.html
+++ b/site/faq.html
@@ -82,8 +82,11 @@
             </p>
         </section>
      </article> 
-        <button class="btn--volver">Volver al inicio</button>
-
+        <section class="cont__btn--volver">
+        <button class="btn--volver">
+            <a href="index.html">Volver al inicio</a>
+        </button>
+        </section>
     </main>
 
     <footer class="pie">
