--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -60,9 +60,13 @@
                 Siendo así la primera y única compañía
                 de desarrollo y cerveza del país.
         </p>
-        <button href="index.html" class="btn--volver">
+
+        <section class="cont__btn--volver">
+            <button href="index.html" class="btn--volver">
                 <a href="index.html">Volver al inicio</a>
         </button></a>
+        </section>
+        
      </article> 
         
 
