--- a/site/index.html
+++ b/site/index.html
@@ -46,13 +46,14 @@
 
 		<main class="contenedorMain">
 
-			<p class="contenedorMain__links">MENÚ DESPLEGABLE EN PROGRESO :D</p><br>
-			<p class="contenedorMain__links">Mientras tanto, podes navegar con estos links:</p><br>
+			<p class="contenedorMain__links">MENÚ PROVISORIO, en lúpulo de arriba, o</p> 
+	
 			<a href="home.html" class="contenedorMain__links">Home</a>
 			<a href="login.html" class="contenedorMain__links">Login</a>
 			<a href="producto.html" class="contenedorMain__links">Producto</a>
 			<a href="sobre_nosotros.html" class="contenedorMain__links">Sobre Nosotros</a>
 			<a href="faq.html" class="contenedorMain__links">FAQ</a>
+
 		</main>
 		
 		
