--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Digital Birra</title>
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="icon" type="image/ico" href="favicon.ico">
 	</head>
 
 	<body class="contenedorBody">
