linkeo el registro

--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
 					<a class="linksMenu--a" href="sobre_nosotros.html">+ SOBRE NOSOTROS</a>
 					<a class="linksMenu--a" href="faq.html">+ PREGUNTAS FRECUENTES</a>
 					<a class="linksMenu--a" href="login.html">+ LOGIN</a>
-					<a class="linksMenu--a" href="">+ REGISTRARTE</a>
+					<a class="linksMenu--a" href="registro.html">+ REGISTRARTE</a>
 					<a class="linksMenu--a" href="">+ CARRITO</a>
 				</section>
 				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></a></section>
