--- a/site/home.html
+++ b/site/home.html
@@ -29,7 +29,7 @@
                 <a class="linksMenu--a" href="">+ CARRITO</a>
             </section>
 
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <section class="navBar__faq"><img class="navBar--imagenes" src="static/img/question.svg" alt="question"></section>
                 <section class="navBar__carrito"><img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito"></section>
@@ -136,7 +136,7 @@
     </main>
 
     <footer class="pie">
-        <img class="imagenFooter" src="static/img/LogoA.png" alt="Logo Digital Birra Footer">
+        <img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
         
     </footer>
