--- a/site/login.html
+++ b/site/login.html
@@ -27,7 +27,7 @@
                 <a class="linksMenu--a" href="">+ REGISTRARTE</a>
                 <a class="linksMenu--a" href="">+ CARRITO</a>
             </section>
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" width=40% src="static/img/LogoA.png" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
                 <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
@@ -57,7 +57,7 @@
     </main>
     
     <footer class="pie">
-        <img class="imagenFooter" src="static/img/LogoA.png" alt="Logo Digital Birra Footer">
+        <img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
         
     </footer>
