--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -31,8 +31,8 @@
 
             <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
-                <section class="navBar__faq"><img class="navBar--imagenes" src="static/img/question.svg" alt="question"></section>
-                <section class="navBar__carrito"><img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito"></section>
+                <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+                <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
             </section>
         </nav>
         
