--- a/site/home.html
+++ b/site/home.html
@@ -49,7 +49,7 @@
     <main class="contenedorMain">
         <article class="cont__portada">
             <section class="cont__img__titl">
-                <h1 class="portada--titl">DIGITAL BIRRA</h1>
+                <img class="portada--titl" src="static/img/dBirra-titl.svg" alt="digital birra">
                 <img class="portada--img" src="static/img/fondoDB.jpg" alt="portada">
             </section>
             
