fondo portada a background img

--- a/site/home.html
+++ b/site/home.html
@@ -50,7 +50,7 @@
         <article class="cont__portada">
             <section class="cont__img__titl">
                 <img class="portada--titl" src="static/img/dBirra-titl.svg" alt="digital birra">
-                <img class="portada--img" src="static/img/fondoDB.jpg" alt="portada">
+                <!-- <img class="portada--img" src="static/img/fondoDB.jpg" alt="portada"> -->
             </section>
             
             
