--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,8 @@
 		<link rel="icon" type="image/ico" href="favicon.ico">
 	</head>
 
-	<body class="contenedorBody">
+	<body>
+	<section class="contenedorBody">	
 		<header class="cabeza">
 			<nav class="navBar">
 				<section class="navBar__menu">
@@ -66,6 +67,6 @@
 		</footer>
 		
 		
-		
-	</body>
-	</html>
+</section>
+</body>
+</html>
