--- a/site/login.html
+++ b/site/login.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/ico" href="favicon.ico">
     <title>Digital Birra</title>
 </head>
-<body class="contenedorBody">
-
+<body>
+<section class="contenedorBody">
     <header class="cabeza">
         <nav class="navBar">
             <section class="navBar__menu">
@@ -61,6 +61,6 @@
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
         
     </footer>
-    
+</section>
 </body>
 </html>
