--- a/site/registro.html
+++ b/site/registro.html
@@ -20,7 +20,7 @@
             </section>
             <section class="navBar__linksMenu">
                 <a class="linksMenu--a" href="home.html">+ HOME</a>
-                <a class="linksMenu--a" href="">+ MI CUENTA</a>
+                <a class="linksMenu--a" href="producto.html">+ PRODUCTO</a>
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ SOBRE NOSOTROS</a>
                 <a class="linksMenu--a" href="faq.html">+ PREGUNTAS FRECUENTES</a>
                 <a class="linksMenu--a" href="login.html">+ LOGIN</a>
