saco clase de body

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-	<section class="contenedorBody">	
+	<section class="contenedorApp">	
 		<header class="cabeza">
 			<nav class="navBar">
 				<section class="navBar__menu">
