sumo link de faq y carrito

--- a/site/index.html
+++ b/site/index.html
@@ -30,8 +30,12 @@
 				</section>
 				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
-					<img class="navBar--imagenes" src="static/img/question.svg" alt="question">
-					<img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+					<a href="faq.html">
+						<img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+					</a>
+					<a href="carrito.html">
+						<img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+					</a>
 				</section>
 			</nav>
 			
