--- a/site/faq.html
+++ b/site/faq.html
@@ -25,7 +25,7 @@
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ SOBRE NOSOTROS</a>
                 <a class="linksMenu--a" href="faq.html">+ PREGUNTAS FRECUENTES</a>
                 <a class="linksMenu--a" href="login.html">+ LOGIN</a>
-                <a class="linksMenu--a" href="">+ REGISTRARTE</a>
+                <a class="linksMenu--a" href="registro.html">+ REGISTRARTE</a>
                 <a class="linksMenu--a" href="">+ CARRITO</a>
             </section>
 
