flew wrap para los productos del home

--- a/site/producto.html
+++ b/site/producto.html
@@ -52,7 +52,7 @@
 
     <main class="contenedorMain">
 
-    <section class="block__producto">
+    <section class="bloque__producto">
             <article class="cont__producto--pp">
                 <img class="producto--img" src="static/img/ipa.jpg" alt="birraA">
                 <article class="producto__info--pp">
