hice responsive el login y sobre nosotros. para mobile achique el width del menu desplegable

--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,7 @@
 
 		<main class="contenedorMain">
 
-			<p class="contenedorMain__links">MENÚ PROVISORIO en lúpulo de arriba, o</p> 
+			<p class="contenedorMain__links">MENÚ PROVISORIO en lúpulo de arriba, o sino:</p> 
 	
 			<a href="home.html" class="contenedorMain__links">Home</a>
 			<a href="login.html" class="contenedorMain__links">Login</a>
