--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -68,7 +68,7 @@
 
         <section class="cont__btn--volver">
             <button href="index.html" class="btn--volver">
-                <a href="index.html">Volver al inicio</a>
+                <a class="volverInicio" href="index.html">Volver al inicio</a>
         </button></a>
         </section>
         
