--- a/site/sumar_producto.html
+++ b/site/sumar_producto.html
@@ -45,7 +45,7 @@
             <h1 class="titlG">SUMAR PRODUCTO</h1>
         </section>
 
-        <form action="" class="reg__form">
+        <form action="post" class="reg__form">
             <input class="reg--input" type= "text" name="nombreProducto" placeholder="NOMBRE DEL PRODUCTO" autofocus required>
             <input class="reg--input" type="text" name="descripProducto" placeholder="DESCRIPCIÓN" autofocus required>
             <input class="reg--input" type="number" name="gradacion" placeholder="GRADACIÓN" autofocus required>
