--- a/site/modif_producto.html
+++ b/site/modif_producto.html
@@ -41,9 +41,21 @@
     </header>
 
     <main class="contenedorMain">
-        <section class="cont__admin--titl">
-            <h1 class="titlG">MODIFICAR PRODUCTO</h1>
+        
+        <section class="buscadorModif">
+            <form class="buscador__formulario">
+                <input class="buscador__formulario--input" type="text" placeholder="buscá el producto a modificar.." autofocus>
+            </form>
+
+            <img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
+
         </section>
+
+        <section class="cont__admin--titl">
+            <h1 class="titlG">MODIFICAR/ELIMINAR</h1>
+        </section>
+
+        
 
         <form action="post" class="reg__form">
             <input class="reg--input" type= "text" name="nombreProducto" placeholder="NOMBRE DEL PRODUCTO" autofocus required>
