orden clases responsive home producto

--- a/site/faq.html
+++ b/site/faq.html
@@ -20,13 +20,13 @@
             </section>
 
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="home.html">+ HOME</a>
-                <a class="linksMenu--a" href="producto.html">+ PRODUCTO</a>
-                <a class="linksMenu--a" href="sobre_nosotros.html">+ SOBRE NOSOTROS</a>
-                <a class="linksMenu--a" href="faq.html">+ PREGUNTAS FRECUENTES</a>
-                <a class="linksMenu--a" href="login.html">+ LOGIN</a>
-                <a class="linksMenu--a" href="registro.html">+ REGISTRARTE</a>
-                <a class="linksMenu--a" href="">+ CARRITO</a>
+                <a class="linksMenu--a" href="home.html">+ home</a>
+                <a class="linksMenu--a" href="producto.html">+ producto</a>
+                <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
+                <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
+                <a class="linksMenu--a" href="login.html">+ login</a>
+                <a class="linksMenu--a" href="registro.html">+ registrate</a>
+                <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
             <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
