errores de tipeo

--- a/site/faq.html
+++ b/site/faq.html
@@ -80,7 +80,7 @@
             Simplemente tenés que completar los siguientes datos:
             <ul class="parrafo">
                 <li>-Nombre</li>
-                <li>-Apellida</li>
+                <li>-Apellido</li>
                 <li>-Mail</li>
                 <li>-Contraseña</li>
             </ul>
