--- a/site/sumar_producto.html
+++ b/site/sumar_producto.html
@@ -48,7 +48,7 @@
         <form action="post" class="reg__form">
             <input class="reg--input" type= "text" name="nombreProducto" placeholder="NOMBRE DEL PRODUCTO" autofocus required>
             <input class="reg--input" type="text" name="descripProducto" placeholder="DESCRIPCIÓN" autofocus required>
-            <input class="reg--input" type="number" name="gradacion" placeholder="GRADACIÓN" autofocus required>
+            <input class="reg--input" type="number" name="graduacion" placeholder="GRADACIÓN" autofocus required>
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  autofocus required>
             <input class="reg--input" type="number" name="mililitros" placeholder="MILILITROS" autofocus required>
             <input class="reg--input" type="file" name="imagenProducto" placeholder="IMG" value="IMG" autofocus required>
