link logo footer

--- a/site/login.html
+++ b/site/login.html
@@ -61,9 +61,8 @@
     </main>
     
     <footer class="pie">
-        <img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+        <a href="home.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
-        
     </footer>
 </section>
 </body>
