cambie nombre de home por index

--- a/site/login.html
+++ b/site/login.html
@@ -19,7 +19,7 @@
                 </article>
             </section>
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="home.html">+ home</a>
+                <a class="linksMenu--a" href="index.html">+ index</a>
                 <a class="linksMenu--a" href="producto.html">+ producto</a>
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
                 <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
@@ -27,7 +27,7 @@
                 <a class="linksMenu--a" href="registro.html">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
-            <section class="navBar__contenedor--logo"><a href="home.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <a href="faq.html">
                     <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
@@ -61,7 +61,7 @@
     </main>
     
     <footer class="pie">
-        <a href="home.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
