--- a/site/faq.html
+++ b/site/faq.html
@@ -20,7 +20,7 @@
             </section>
 
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="home.html">+ home</a>
+                <a class="linksMenu--a" href="index.html">+ index</a>
                 <a class="linksMenu--a" href="producto.html">+ producto</a>
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
                 <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
@@ -95,7 +95,7 @@
     </main>
 
     <footer class="pie">
-        <a href="home.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
         
     </footer>
