href de admin db

--- a/site/admin_db.html
+++ b/site/admin_db.html
@@ -45,18 +45,18 @@
             <h1 class="titlG">ADMIN DB</h1>
         </section>
         <section class="cont__admin--btn">
-            <button href="index.html" class="btn--adm">
-                <a href="">SUMAR PRODUCTO</a>
+            <button href="sumar_producto.html" class="btn--adm">
+                <a href="sumar_producto.html">SUMAR PRODUCTO</a>
             </button></a>
-            <button href="" class="btn--adm">
-                <a href="">MODIFICAR/ELIMINAR PRODUCTO</a>
+            <button href="modif_producto.html" class="btn--adm">
+                <a href="modif_producto.html">MODIFICAR/ELIMINAR PRODUCTO</a>
             </button></a>
         </section>
              
     </main>
     
     <footer class="pie">
-        <a href="home.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+      <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
