--- a/site/home.html
+++ b/site/home.html
@@ -26,7 +26,7 @@
                 <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
                 <a class="linksMenu--a" href="login.html">+ login</a>
                 <a class="linksMenu--a" href="registro.html">+ registrate</a>
-                <a class="linksMenu--a" href="">+ carrito</a>
+                <a class="linksMenu--a" href="carrito.html">+ carrito</a>
             </section>
 
             <section class="navBar__contenedor--logo"><a href="home.html"><img class="logo-navBar" src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
