--- a/site/carrito.html
+++ b/site/carrito.html
@@ -120,7 +120,7 @@
 		</article>
 <article class="carrito_total">
 	<p class="carrito_total_total">TOTAL</p>
-	<p class= "carrito_total_precio">-$340-</p>
+	<p class= "carrito_total_precio">$340</p>
 </article>
 		<button class="boton_comprar" type="submit">COMPRAR</button>
 		
