links a index en carrito y pies de página

--- a/site/admin_db.html
+++ b/site/admin_db.html
@@ -19,7 +19,7 @@
                 </article>
             </section>
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="home.html">+ home</a>
+                <a class="linksMenu--a" href="index.html">+ home</a>
                 <a class="linksMenu--a" href="producto.html">+ producto</a>
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
                 <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
