--- a/site/carrito.html
+++ b/site/carrito.html
@@ -20,7 +20,7 @@
 					</article>
 				</section>
 				<section class="navBar__linksMenu">
-					<a class="linksMenu--a" href="home.html">+ home</a>
+					<a class="linksMenu--a" href="index.html">+ home</a>
 					<a class="linksMenu--a" href="producto.html">+ producto</a>
 					<a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
 					<a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
@@ -28,7 +28,7 @@
 					<a class="linksMenu--a" href="registro.html">+ registrate</a>
 					<a class="linksMenu--a" href="">+ carrito</a>
 				</section>
-				<section class="navBar__contenedor--logo"><a href="home.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
 					<a href="faq.html">
 						<img class="navBar--imagenes" src="static/img/question.svg" alt="question">
@@ -128,12 +128,14 @@
 	
 		
 		
-		<footer class="pie">
-			<img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+	<footer class="pie">
+			<a href="index.html">
+				<img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+			</a>
 			<p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
 			
 		</footer>
-		
+			
 		
 </section>
 </body>
