--- a/site/error.html
+++ b/site/error.html
@@ -67,7 +67,9 @@
 		
 		
 		<footer class="pie">
-			<img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+			<a href="index.html">
+				<img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+			</a>
 			<p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
 			
 		</footer>
