--- a/site/faq.html
+++ b/site/faq.html
@@ -94,11 +94,14 @@
         </section>
     </main>
 
-    <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+	<footer class="pie">
+        <a href="index.html">
+            <img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+        </a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
         
     </footer>
+    
 
 </section>    
 </body>
