ajuste de tamaños index

--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -67,9 +67,9 @@
         </p>
 
         <section class="cont__btn--volver">
-            <button href="index.html" class="btn--volver">
+            <button class="btn--volver">
                 <a class="volverInicio" href="index.html">Volver al inicio</a>
-        </button></a>
+            </button></a>
         </section>
         
      </article> 
