--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
             </section>
 
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="index.html">+ index</a>
+                <a class="linksMenu--a" href="index.html">+ home</a>
                 <a class="linksMenu--a" href="producto.html">+ producto</a>
                 <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
                 <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
