sumo clase cont__cantidad--pp

--- a/site/producto.html
+++ b/site/producto.html
@@ -64,7 +64,7 @@
                 </article>
 
                 <section class="cont__btn__agregar--pp">
-                    <section class="cont__cantidad">
+                    <section class="cont__cantidad--pp">
                         <button class="btn--cant">+</button>
                         <button class="btn--cant">x1</button>
                         <button class="btn--cant">-</button>
