sacamos estilos por defecto del input del buscador

--- a/site/producto.html
+++ b/site/producto.html
@@ -71,9 +71,7 @@
                     </section>
                         <button class="btn--agregar">Agregar</button>
                     </section>
-                <p class="descripcion--pp">IPA DB es una de nuestras primeras creaciones,
-                    valorada por su sabor suave. Recomendamos
-                    acompañarla con una pizza de muzzarella.</p>                
+                <p class="descripcion--pp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam dolore culpa aut, nihil, tempora harum, ab consequatur enim quaerat necessitatibus ad. Alias recusandae veniam adipisci, ipsum sapiente excepturi saepe maiores.</p>                
                 </section>   
             </article> 
     </section>
