mejoramos tamaños de los botones y centramos los options

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
     <title>Digital Birra</title>
 </head>
 <body>
-    <section  class="contenedorBody">
+    <section  class="contenedorApp">
     <header class="cabeza">
         <nav class="navBar">
             <section class="navBar__menu">
