--- a/site/admin_db.html
+++ b/site/admin_db.html
@@ -27,13 +27,13 @@
                 <a class="linksMenu--a" href="registro.html">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <a href="faq.html">
-                    <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+                    <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
                 <a href="carrito.html">
-                    <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+                    <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
         </nav>
@@ -56,7 +56,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
