--- a/site/carrito.html
+++ b/site/carrito.html
@@ -28,13 +28,13 @@
 					<a class="linksMenu--a" href="registro.html">+ registrate</a>
 					<a class="linksMenu--a" href="">+ carrito</a>
 				</section>
-				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+				<section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
 					<a href="faq.html">
-						<img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+						<img class="navBar--imagenes" src="./img/question.svg" alt="question">
 					</a>
 					<a href="carrito.html">
-						<img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+						<img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
 					</a>
 				</section>
 			</nav>
@@ -44,14 +44,14 @@
 					<input class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
 				</form>
 
-				<img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
+				<img class="buscador__lupa" src="./img/lupa.svg" alt="Lupita">
 
 			</section>
 		</header>
 		<h2 class="mi_carrito">MI CARRITO</h2>
 	<article class="carrito_productos">
 		<article class="carrito__producto">
-			<img class="carrito_producto--img" src="static/img/ipa.jpg" alt="birraA">
+			<img class="carrito_producto--img" src="./img/ipa.jpg" alt="birraA">
 			<article class="carrito_producto__info">
 				<p class= carrito_descripcion>IPA 14%</p>
 				<p class= carrito_descripcion> 500ML</p>
@@ -74,7 +74,7 @@
 	</article>
 		<article class="carrito_productos">
 			<article class="carrito__producto">
-				<img class="carrito_producto--img" src="static/img/Rubia.jpg" alt="birraA">
+				<img class="carrito_producto--img" src="./img/Rubia.jpg" alt="birraA">
 				<article class="carrito_producto__info">
 					<p class= carrito_descripcion>Rubia 7%</p>
 					<p class= carrito_descripcion> 500ML</p>
@@ -97,7 +97,7 @@
 		</article>
 		<article class="carrito_productos">
 			<article class="carrito__producto">
-				<img class="carrito_producto--img" src="static/img/Negra.jpg" alt="birraA">
+				<img class="carrito_producto--img" src="./img/Negra.jpg" alt="birraA">
 				<article class="carrito_producto__info">
 					<p class= carrito_descripcion>Negra 14%</p>
 					<p class= carrito_descripcion> 500ML</p>
@@ -130,7 +130,7 @@
 		
 	<footer class="pie">
 			<a href="index.html">
-				<img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer">
+				<img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer">
 			</a>
 			<p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
 			
