--- a/site/index.html
+++ b/site/index.html
@@ -29,13 +29,13 @@
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar" src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <a href="faq.html">
-                    <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+                    <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
                 <a href="carrito.html">
-                    <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+                    <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
         </nav>
@@ -45,7 +45,7 @@
                 <input class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
             </form>
 
-            <img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
+            <img class="buscador__lupa" src="./img/lupa.svg" alt="Lupita">
 
         </section>
     </header>
@@ -53,8 +53,8 @@
     <main class="contenedorMain">
         <article class="cont__portada">
             <section class="cont__img__titl">
-                <img class="portada--titl" src="static/img/dBirra-titl.svg" alt="digital birra">
-                <!-- <img class="portada--img" src="static/img/fondoDB.jpg" alt="portada"> -->
+                <img class="portada--titl" src="./img/dBirra-titl.svg" alt="digital birra">
+                <!-- <img class="portada--img" src="./img/fondoDB.jpg" alt="portada"> -->
             </section>
             
             <section class="cont__select__venTodas"> 
@@ -74,7 +74,7 @@
 
     <section class="bloque__productos">
             <article class="cont__producto">
-                <img class="producto--img" src="static/img/ipa.jpg" alt="birraA">
+                <img class="producto--img" src="./img/ipa.jpg" alt="birraA">
                 <article class="producto__info">
                     <p>IPA 14%</p>
                     <section class="info--precioMl">
@@ -95,7 +95,7 @@
             </article>
             
             <article class="cont__producto">
-                <img class="producto--img" src="static/img/Rubia.jpg" alt="birraB">
+                <img class="producto--img" src="./img/Rubia.jpg" alt="birraB">
                 <article class="producto__info">
                     <p>Rubia 7%</p>
                     <section class="info--precioMl">
@@ -116,7 +116,7 @@
             </article>
 
         <article class="cont__producto">
-                <img class="producto--img" src="static/img/Negra.jpg" alt="birraC">
+                <img class="producto--img" src="./img/Negra.jpg" alt="birraC">
            <article class="producto__info">
                <p>Negra 14%</p>
                <section class="info--precioMl">
@@ -142,7 +142,7 @@
     </main>
 
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
