--- a/site/modif_producto.html
+++ b/site/modif_producto.html
@@ -27,13 +27,13 @@
                 <a class="linksMenu--a" href="registro.html">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <a href="faq.html">
-                    <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+                    <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
                 <a href="carrito.html">
-                    <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+                    <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
         </nav>
@@ -47,7 +47,7 @@
                 <input class="buscador__formulario--input" type="text" placeholder="buscá el producto a modificar.." autofocus>
             </form>
 
-            <img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
+            <img class="buscador__lupa" src="./img/lupa.svg" alt="Lupita">
 
         </section>
 
@@ -74,7 +74,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
