--- a/site/producto.html
+++ b/site/producto.html
@@ -29,13 +29,13 @@
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="static/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
                 <a href="faq.html">
-                    <img class="navBar--imagenes" src="static/img/question.svg" alt="question">
+                    <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
                 <a href="carrito.html">
-                    <img class="navBar--imagenes" src="static/img/shopping-cart.svg" alt="carrito">
+                    <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
         </nav>
@@ -45,7 +45,7 @@
                 <input class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
             </form>
 
-            <img class="buscador__lupa" src="static/img/lupa.svg" alt="Lupita">
+            <img class="buscador__lupa" src="./img/lupa.svg" alt="Lupita">
 
         </section>
     </header>
@@ -54,7 +54,7 @@
 
     <section class="bloque__producto">
             <article class="cont__img__producto--pp">
-                <img class="producto--img" src="static/img/ipa.jpg" alt="birraA">
+                <img class="producto--img" src="./img/ipa.jpg" alt="birraA">
             </article>
                 
             <article class="cont__titl__btn__agregar--pp">
@@ -79,7 +79,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="static/img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 
