--- a/site/producto.html
+++ b/site/producto.html
@@ -20,12 +20,12 @@
             </section>
 
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="index.html">+ home</a>
-                <a class="linksMenu--a" href="producto.html">+ producto</a>
-                <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
-                <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
-                <a class="linksMenu--a" href="login.html">+ login</a>
-                <a class="linksMenu--a" href="registro.html">+ registrate</a>
+                <a class="linksMenu--a" href="index">+ home</a>
+                <a class="linksMenu--a" href="producto">+ producto</a>
+                <a class="linksMenu--a" href="sobre_nosotros">+ sobre nosotros</a>
+                <a class="linksMenu--a" href="faq">+ preguntas frecuentes</a>
+                <a class="linksMenu--a" href="login">+ login</a>
+                <a class="linksMenu--a" href="registro">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
