--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -20,21 +20,21 @@
             </section>
 
             <section class="navBar__linksMenu">
-                <a class="linksMenu--a" href="index.html">+ home</a>
-                <a class="linksMenu--a" href="producto.html">+ producto</a>
-                <a class="linksMenu--a" href="sobre_nosotros.html">+ sobre nosotros</a>
-                <a class="linksMenu--a" href="faq.html">+ preguntas frecuentes</a>
-                <a class="linksMenu--a" href="login.html">+ login</a>
-                <a class="linksMenu--a" href="registro.html">+ registrate</a>
+                <a class="linksMenu--a" href="index">+ home</a>
+                <a class="linksMenu--a" href="producto">+ producto</a>
+                <a class="linksMenu--a" href="sobre_nosotros">+ sobre nosotros</a>
+                <a class="linksMenu--a" href="faq">+ preguntas frecuentes</a>
+                <a class="linksMenu--a" href="login">+ login</a>
+                <a class="linksMenu--a" href="registro">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
-                <a href="faq.html">
+                <a href="faq">
                     <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
-                <a href="carrito.html">
+                <a href="carrito">
                     <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
@@ -78,7 +78,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
