--- a/site/admin_db.html
+++ b/site/admin_db.html
@@ -45,7 +45,7 @@
             <h1 class="titlG">ADMIN DB</h1>
         </section>
         <section class="cont__admin--btn">
-            <button href="index.html" class="btn--adm">
+            <button href="index" class="btn--adm">
                 <a href="">SUMAR PRODUCTO</a>
             </button></a>
             <button href="" class="btn--adm">
@@ -56,7 +56,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
