--- a/site/producto.html
+++ b/site/producto.html
@@ -29,12 +29,12 @@
                 <a class="linksMenu--a" href="">+ carrito</a>
             </section>
 
-            <section class="navBar__contenedor--logo"><a href="index.html"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
+            <section class="navBar__contenedor--logo"><a href="index"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
-                <a href="faq.html">
+                <a href="faq">
                     <img class="navBar--imagenes" src="./img/question.svg" alt="question">
                 </a>
-                <a href="carrito.html">
+                <a href="carrito">
                     <img class="navBar--imagenes" src="./img/shopping-cart.svg" alt="carrito">
                 </a>
             </section>
@@ -79,7 +79,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 
