--- a/site/sumar_producto.html
+++ b/site/sumar_producto.html
@@ -62,7 +62,7 @@
     </main>
     
     <footer class="pie">
-        <a href="index.html"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
+        <a href="index"><img class="imagenFooter" src="./img/LogoA.svg" alt="Logo Digital Birra Footer"></a>
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
