sumo h menu con js

--- a/site/login.html
+++ b/site/login.html
@@ -26,6 +26,7 @@
                 <a class="linksMenu--a" href="login">+ login</a>
                 <a class="linksMenu--a" href="registro">+ registrate</a>
                 <a class="linksMenu--a" href="">+ carrito</a>
+                <img class="x_menu" src="./img/laX.svg" alt="laX" onclick="toggleClass()">
             </section>
             <section class="navBar__contenedor--logo"><a href="index"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
             <section class="navBar__faq--carrito">
@@ -65,5 +66,6 @@
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
+<script src="menu.js"></script>
 </body>
 </html>
