--- a/site/carrito.html
+++ b/site/carrito.html
@@ -27,6 +27,7 @@
 					<a class="linksMenu--a" href="login">+ login</a>
 					<a class="linksMenu--a" href="registro">+ registrate</a>
 					<a class="linksMenu--a" href="">+ carrito</a>
+					<img class="x_menu" src="./img/laX.svg" alt="laX" onclick="toggleClass()">
 				</section>
 				<section class="navBar__contenedor--logo"><a href="index"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
 				<section class="navBar__faq--carrito">
@@ -136,7 +137,7 @@
 			
 		</footer>
 			
-		
 </section>
+<script src="menu.js"></script>
 </body>
 </html>
