--- a/site/index.html
+++ b/site/index.html
@@ -147,6 +147,6 @@
         <p class="textoFooter">DIGITAL BIRRA 2020 BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS</p>
     </footer>
 </section>
-<script src="index.js"></script>
+<script src="menu.js"></script>
 </body>
 </html>
