--- a/site/preindex.html
+++ b/site/preindex.html
@@ -80,11 +80,12 @@
 
 </svg>
 </a>
-	<!-- <p>¿SOS MAYOR DE 18?</p>
-	<section>
-		<img src="" alt="yes">
-		<img src="" alt="no">
-	</section> -->
+	<p class="titl__preindex">¿Sos mayor de 18?</p>
+	<section class="intro--respuesta">
+	<a href="index"><p>Sí</p></a>
+	<a href=""><p>No</p></a>
+	</section>
+	
 </section>
 </body>
 </html>
