cambio pregunta inicio

--- a/site/preindex.html
+++ b/site/preindex.html
@@ -80,11 +80,10 @@
 
 </svg>
 </a>
-	<p class="titl__preindex">¿Sos mayor de 18?</p>
-	<section class="intro--respuesta">
-	<a href="index"><p>Sí</p></a>
-	<a href=""><p>No</p></a>
-	</section>
+	<p class="titl__preindex">Soy mayor de 18</p>
+	<a href="index"><p class="ingreso">Ingresar al sitio</p></a>
+	<!-- <section class="intro--respuesta">
+	</section> -->
 	
 </section>
 </body>
