--- a/site/preindex.html
+++ b/site/preindex.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <section class="contenedorPreIntro">
-	<a href="index">
+	<!-- <a href="index"> -->
 	<?xml version="1.0" encoding="utf-8"?>
 
 	<svg class="cont__intro--logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -80,10 +80,15 @@
 
 </svg>
 </a>
-	<p class="titl__preindex">Soy mayor de 18</p>
-	<a href="index"><p class="ingreso">Ingresar al sitio</p></a>
-	<!-- <section class="intro--respuesta">
-	</section> -->
+	
+	<!-- <a href="index"><p class="ingreso">Ingresar al sitio</p></a> -->
+	<section class="intro--respuesta">
+		<label class="titl__preindex" for="soyMayor"> 
+			<p>soy mayor de 18</p> 
+			<!-- <img class="laX--intro" src="/img/laX.svg" alt="laX"> -->
+		</label>
+		<input class="soyMayor--input" onclick="location.href = 'index';" type="checkbox" name="soyMayor" id="soyMayor">
+	</section> 
 	
 </section>
 </body>
