cambio color de botones, padding menu, y responsive carrito

--- a/site/modif_producto.html
+++ b/site/modif_producto.html
@@ -68,7 +68,7 @@
             <input class="reg--input" type="number" name="regConfPassword" placeholder="PRECIO" id="regConfPassword" autofocus required>
             
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>
-            <input class="reg--submit" type="submit" value="ELIMINAR" autofocus>
+            <input class="reg--submit--eliminar" type="submit" value="ELIMINAR" autofocus>
            
         </form>
 
