sumo estilo checked a checkbox de preindex

--- a/site/preindex.html
+++ b/site/preindex.html
@@ -84,7 +84,7 @@
 	<!-- <a href="index"><p class="ingreso">Ingresar al sitio</p></a> -->
 	<section class="intro--respuesta">
 		<label class="titl__preindex" for="soyMayor"> 
-			<p>soy mayor de 18</p> 
+			<p class="soyMayor--par">soy mayor de 18</p> 
 			<!-- <img class="laX--intro" src="/img/laX.svg" alt="laX"> -->
 		</label>
 		<input class="soyMayor--input" onclick="location.href = 'index';" type="checkbox" name="soyMayor" id="soyMayor">
