--- a/site/error.html
+++ b/site/error.html
@@ -26,7 +26,7 @@
 					<a class="linksMenu--a" href="faq">+ preguntas frecuentes</a>
 					<a class="linksMenu--a" href="login">+ login</a>
 					<a class="linksMenu--a" href="registro">+ registrate</a>
-					<a class="linksMenu--a" href="">+ carrito</a>
+					<a class="linksMenu--a" href="carrito">+ carrito</a>
 					<img class="x_menu" src="./img/laX.svg" alt="laX" onclick="toggleClass()">
 				</section>
 				<section class="navBar__contenedor--logo"><a href="index"><img class="logo-navBar"  src="./img/LogoA.svg" alt="Logo Digital Birra"></a></section>
