sumo onclick y toque un poco el menu

--- a/site/carrito.html
+++ b/site/carrito.html
@@ -11,7 +11,7 @@
 	<body>
 	<section class="contenedorApp">	
 		<header class="cabeza">
-			<nav class="navBar">
+			<nav class="navBar" onclick="toggleClass()">
 				<section class="navBar__menu">
 					<article class="menuHamburguesa">
 						<div class="barrita1"></div>
