--- a/site/registro.html
+++ b/site/registro.html
@@ -11,7 +11,7 @@
     <section  class="contenedorApp">
         <header class="cabeza">
             <nav class="navBar">
-                <section class="navBar__menu">
+                <section class="navBar__menu" onclick="toggleClass()">
                     <article class="menuHamburguesa">
                         <div class="barrita1"></div>
                         <div class="barrita2"></div>
