--- a/site/preindex.html
+++ b/site/preindex.html
@@ -10,8 +10,7 @@
 <body>
 <section class="contenedorPreIntro">
 	<!-- <a href="index"> -->
-	<?xml version="1.0" encoding="utf-8"?>
-
+	<!-- <?xml version="1.0" encoding="utf-8"?> -->
 	<svg class="cont__intro--logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="412 -284 1024 768" style="enable-background:new 412 -284 1024 768;" xml:space="preserve">
 
@@ -79,7 +78,6 @@
 			c-0.5-6.4,3-6.4,7.7-6.4c36.4,0.2,72.7,0.2,109.1-0.2c6.7,0,8.4,2,8.2,8.4C1258.4-43.6,1258.5,31.1,1258.5,105.8z"/>
 
 </svg>
-</a>
 	
 	<!-- <a href="index"><p class="ingreso">Ingresar al sitio</p></a> -->
 	<section class="intro--respuesta">
