retoqueo de producto

--- a/site/producto.html
+++ b/site/producto.html
@@ -71,7 +71,7 @@
                     </section>
                         <button class="btn--agregar">Agregar</button>
                     </section>
-                <p class="descripcion--pp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam dolore culpa aut, nihil, tempora harum, ab consequatur enim quaerat necessitatibus ad. Alias recusandae veniam adipisci, ipsum sapiente excepturi saepe maiores.</p>                
+                <p class="descripcion--pp">Nuestra primera cerveza! Cocinando esta cerveza. Elavorada con lupulos 100% americanos, sabores citricos que recuerdan la naranja y el maracuya. Refrescante y amarga, ideal para disfrutar con un buen asado.</p>                
                 </section>   
             </article> 
     </section>
