arreglo cerrar menu carrito

--- a/site/carrito.html
+++ b/site/carrito.html
@@ -11,8 +11,8 @@
 	<body>
 	<section class="contenedorApp">	
 		<header class="cabeza">
-			<nav class="navBar" onclick="toggleClass()">
-				<section class="navBar__menu">
+			<nav class="navBar">
+				<section class="navBar__menu" onclick="toggleClass()">
 					<article class="menuHamburguesa">
 						<div class="barrita1"></div>
 						<div class="barrita2"></div>
