ruta sobre nosotros footer

--- a/site/sobre_nosotros.html
+++ b/site/sobre_nosotros.html
@@ -69,7 +69,7 @@
 
         <section class="cont__btn--volver">
             <button class="btn--volver">
-                <a class="volverInicio" href="index.html">Volver al inicio</a>
+                <a class="volverInicio" href="index">Volver al inicio</a>
             </button></a>
         </section>
         
