cmbie un error de ortografia en producto

--- a/site/producto.html
+++ b/site/producto.html
@@ -71,7 +71,7 @@
                     </section>
                         <button class="btn--agregar">Agregar</button>
                     </section>
-                <p class="descripcion--pp">Nuestra primera cerveza! Elavorada con lupulos 100% americanos, sabores citricos que recuerdan la naranja y el maracuya. Refrescante y amarga, ideal para disfrutar con un buen asado.</p>                
+                <p class="descripcion--pp">Nuestra primera cerveza! Elaborada con lupulos 100% americanos, sabores citricos que recuerdan la naranja y el maracuya. Refrescante y amarga, ideal para disfrutar con un buen asado.</p>                
                 </section>   
             </article> 
     </section>
