js de preindex con tiempo pos click

--- a/site/preindex.html
+++ b/site/preindex.html
@@ -85,9 +85,10 @@
 			<p class="soyMayor--par">soy mayor de 18</p> 
 			<!-- <img class="laX--intro" src="/img/laX.svg" alt="laX"> -->
 		</label>
-		<input class="soyMayor--input" onclick="location.href = 'index';" type="checkbox" name="soyMayor" id="soyMayor">
+		<input class="soyMayor--input" onclick="presentar()" type="checkbox" name="soyMayor" id="soyMayor">
 	</section> 
 	
 </section>
+<script src="preindex.js"></script>
 </body>
 </html>
